# warehouse/api/openapi.yaml
@@ -8,6 +8,35 @@ servers:
     description: Local development server
 
 components:
+  schemas:
+    Observation:
+      type: object
+      description: A generic Observation object shape
+      properties:
+        kind:
+          type: string
+          description: The kind of observation
+          example: "is_malware"
+          enum:
+            - is_malware
+            - is_spam
+            - is_dependency_confusion
+            - something_else
+        inspector_url:
+          type: string
+          description: |
+            A link to notable source code using our [Inspector](https://inspector.pypi.io/) service.
+            **Required** if `kind=is_malware`
+          pattern: "^https://inspector.pypi.io/project/.*"
+          example: "https://inspector.pypi.io/project/..."
+        summary:
+          type: string
+          description: A brief summary of the observation
+          example: "This project is distributing malware"
+      required:
+        - kind
+        - summary
+      example: { "kind": "is_malware", "summary": "This project is distributing malware" }
   securitySchemes:
     bearerAuth:
       description: "[PyPI API Token](https://pypi.org/help/#apitoken)"
@@ -43,3 +72,41 @@ paths:
                 example: { "username": "someuser" }
         '400':
             description: Bad request
+  /danger-api/projects/{name}/observations:
+    post:
+      summary: Submit a project observation
+      description: Submit a Project Observation to the PyPI team for review.
+      operationId: submitObservation
+      tags:
+        - danger-api
+      parameters:
+        - name: name
+          in: path
+          description: The name of the Project
+          required: true
+          schema:
+            type: string
+            example: "project-name"
+      requestBody:
+        description: The Observation payload
+        required: true
+        content:
+          application/vnd.pypi.api-v0-danger+json:
+            schema:
+              $ref: '#/components/schemas/Observation'
+      responses:
+        '202':
+          description: Observation submitted
+          content:
+            application/vnd.pypi.api-v0-danger+json:
+              schema:
+                type: object
+                properties:
+                  project:
+                    type: string
+                    example: "project-name"
+                  thanks:
+                    type: string
+                    example: "for the observation"
+        '400':
+          description: Bad request
